# doterm

./: .gitignore  README.md  doterm.rc.example  pyproject.toml
doterm/: cli.py  config.py  db.py  tui.py
