[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "doterm"
version = "0.1.0"
description = "Fast terminal todo list with curses TUI"
requires-python = ">=3.8"

[project.scripts]
doterm = "doterm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
